--- a/LAW_details.html
+++ b/LAW_details.html
@@ -122,7 +122,7 @@ doc.close();
       doc.close();
 
       // تنظیم لینک PDF
-      const pdfUrl = `/pdfs-translated/${lang}/${lawId}.pdf`;
+      const pdfUrl = `/api/generate-pdf.js?id=${lawId}&lang=${lang}`;
       document.getElementById('pdf-download').href = pdfUrl;
       document.getElementById('pdf-download').style.display = 'inline-flex';
     }
