--- a/fetched_news_list.html
+++ b/fetched_news_list.html
@@ -6,6 +6,74 @@
   <title>News Sources Management</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <script src="https://unpkg.com/@supabase/supabase-js"></script>
+<script>
+  const { createClient } = supabase;
+</script>
+  <script>
+    const SUPABASE_URL = 'https://tdvimwqotnuvcdvhvbjj.supabase.co';
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRkdmltd3FvdG51dmNkdmh2YmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkxMDY2MjcsImV4cCI6MjA2NDY4MjYyN30.CWNPk-S-ECq0c1LRugDJYOchY3mgC2Zchyr8X8-mDeE';
+    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+    function changeLanguage(lang) {
+      document.documentElement.lang = lang;
+      document.body.dir = (lang === 'fa') ? 'rtl' : 'ltr';
+    }
+
+    async function fetchNewsSources() {
+      const { data, error } = await supabase.from('news_sources').select();
+      if (error) return console.error(error);
+      const tbody = document.getElementById('news-table-body');
+      tbody.innerHTML = '';
+      data.forEach((item, index) => {
+        tbody.innerHTML += `
+          <tr>
+            <td class="p-2">${index + 1}</td>
+            <td class="p-2">${item.name_original}</td>
+            <td class="p-2">${item.country}</td>
+            <td class="p-2">${item.language_sup || '-'}</td>
+            <td class="p-2">
+              <button class="text-red-600" onclick="deleteRecord(${item.id})">Delete</button>
+            </td>
+          </tr>`;
+      });
+    }
+
+    async function saveRecord() {
+      const record = {
+        name_original: document.getElementById('name_original').value,
+        website_url: document.getElementById('website_url').value,
+        rss_url: document.getElementById('rss_url').value,
+        country: document.getElementById('country').value,
+        language_sup: document.getElementById('language_sup').value,
+        type: document.getElementById('source_type').value
+      };
+      const { error } = await supabase.from('news_sources').insert([record]);
+      if (error) return alert('Insert error: ' + error.message);
+      alert('Saved!');
+      fetchNewsSources();
+    }
+
+    async function deleteRecord(id) {
+      if (confirm('Are you sure?')) {
+        await supabase.from('news_sources').delete().eq('id', id);
+        fetchNewsSources();
+      }
+    }
+
+    window.onload = async () => {
+      const testDiv = document.createElement('div');
+      testDiv.className = "bg-yellow-100 text-yellow-800 p-2 mb-4 rounded";
+      try {
+        const { data, error } = await supabase.from('news_sources').select('id, name_original');
+        if (error) throw error;
+        testDiv.textContent = `✅ Connected to Supabase. Found ${data.length} records.`;
+      } catch (e) {
+        testDiv.textContent = `❌ Connection failed: ${e.message}`;
+      }
+      document.body.prepend(testDiv);
+      fetchNewsSources();
+    }
+  </script>
 </head>
 <body class="bg-gray-100 p-6 font-sans">
   <div class="max-w-5xl mx-auto">
@@ -70,71 +138,5 @@
       </div>
     </form>
   </div>
-
-  <script>
-    const SUPABASE_URL = 'https://tdvimwqotnuvcdvhvbjj.supabase.co';
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRkdmltd3FvdG51dmNkdmh2YmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkxMDY2MjcsImV4cCI6MjA2NDY4MjYyN30.CWNPk-S-ECq0c1LRugDJYOchY3mgC2Zchyr8X8-mDeE';
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-    function changeLanguage(lang) {
-      document.documentElement.lang = lang;
-      document.body.dir = (lang === 'fa') ? 'rtl' : 'ltr';
-    }
-
-    async function fetchNewsSources() {
-      const { data, error } = await supabase.from('news_sources').select();
-      if (error) return console.error(error);
-      const tbody = document.getElementById('news-table-body');
-      tbody.innerHTML = '';
-      data.forEach((item, index) => {
-        tbody.innerHTML += `
-          <tr>
-            <td class="p-2">${index + 1}</td>
-            <td class="p-2">${item.name_original}</td>
-            <td class="p-2">${item.country}</td>
-            <td class="p-2">\${item.language_sup || '-'}</td>
-            <td class="p-2">
-              <button class="text-red-600" onclick="deleteRecord(${item.id})">Delete</button>
-            </td>
-          </tr>`;
-      });
-    }
-
-    async function saveRecord() {
-      const record = {
-        name_original: document.getElementById('name_original').value,
-        website_url: document.getElementById('website_url').value,
-        rss_url: document.getElementById('rss_url').value,
-        country: document.getElementById('country').value,
-        language_sup: document.getElementById('language_sup').value,
-        type: document.getElementById('source_type').value
-      };
-      const { error } = await supabase.from('news_sources').insert([record]);
-      if (error) return alert('Insert error: ' + error.message);
-      alert('Saved!');
-      fetchNewsSources();
-    }
-
-    async function deleteRecord(id) {
-      if (confirm('Are you sure?')) {
-        await supabase.from('news_sources').delete().eq('id', id);
-        fetchNewsSources();
-      }
-    }
-
-    window.onload = async () => {
-  const testDiv = document.createElement('div');
-  testDiv.className = "bg-yellow-100 text-yellow-800 p-2 mb-4 rounded";
-  try {
-    const { data, error } = await supabase.from('news_sources').select('id, name_original');
-    if (error) throw error;
-    testDiv.textContent = `✅ Connected to Supabase. Found ${data.length} records.`;
-  } catch (e) {
-    testDiv.textContent = `❌ Connection failed: ${e.message}`;
-  }
-  document.body.prepend(testDiv);
-  fetchNewsSources();
-};
-  </script>
 </body>
 </html>
